--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Config files
+config.json
+
+# Bin
+ffxiv-launcher
+*.exe
