--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,3 +1,12 @@
 {
-    "hello":"world"
+  "auth": {
+    "user_id": "",
+    "password": "",
+    "token": false,
+    "session": {
+      "date": "",
+      "id": ""
+    }
+  },
+  "testing": "test"
 }
