--- a/config/config.example.json
+++ b/config/config.example.json
@@ -18,6 +18,7 @@
         }
     },
     "game":{
+        "expansion":"2",
         "dx11":true,
         "path":{
             "boot":"C:\\Program Files (x86)\\SquareEnix\\FINAL FANTASY XIV - A Realm Reborn\\boot\\",
